syntax = "proto3";

package authActions;

service AuthActionsService {
  // Unary
  rpc Login (LoginRequest) returns (LoginResponse);

  rpc CheckToken (CheckTokenRequest) returns (CheckTokenResponse);

}


message LoginRequest{
  string email = 1;
  string password = 2;
}
message LoginResponse{
  string token = 1;
}


message CheckTokenRequest{
  string token = 1;
}
message CheckTokenResponse{
  bool valid = 1;
}